# yogi

./: .gitignore  .gitmodules  CMakeLists.txt  index.ts  makefile  package.json  test.json  test.ts  tsconfig.json
Docs/: README.md  externs.md  frontend-pipeline.md  memory-model.md  ownership.md  variables.md
docs/: README.md  backend-llvm.md  destructor-scheduling.md  loops-and-methods.md  memory-model.md  move-state-validation.md  ownership.md  package-manager.md  runtime-allocator.md  runtime-debug.md  runtime-memory-telemetry.md
docs/audit/: switch-case-default-audit.md
docs/audit/control-flow/: switch-case-default-audit.md
docs/audit/memory/: aggregate-assignment-ownership-audit.md
docs/control-flow/: loops.md
docs/lots/: 02-array-serialization.md  03-array-pop-at-lowering.md  04-switch-case-default.md  05-array-methods-without-callbacks.md  06-array-copy-splice-methods.md  07-array-with-range-diagnostics.md  08-array-named-callback-methods.md  09-array-inline-callbacks.md  10-array-at-and-print.md  11-array-stringification-and-ordering.md  12-array-completion.md  13-iterator-protocol-and-loops.md  14-string-operators-and-template-literals.md  15-string-methods.md  16-string-lifetime-and-array-at.md  17-string-expression-temporaries.md  18-strict-string-methods.md  19-strict-operator-semantics.md  20-struct-declarations.md
docs/memory/: aggregate-assignment.md
docs/testing/: runtime-test-organization.md
docs/todo/: arrays.md  classes.md  language-status.md  strings.md  struct.md
inputs/: config.io  main.io  metrics.io  scoring.io  status.io
libs/flatbuffers/: fbs_generated.h  flatbuffers.h  main_generated.h  meta_generated.h  sir_generated.h
src/: index.ts  yogi  yogi.cpp
src/compiler/: .gitignore  README.md  jest.config.cjs  makefile  package.json  tsconfig.json
src/compiler/src/: index.ts
src/compiler/src/config/: compiler.ts
src/compiler/src/dfs/: index.ts
src/compiler/src/factory/: index.ts
src/compiler/src/fbs/: ast.ts  base.ts  index.ts  meta.ts  sir.ts
src/compiler/src/flatbuffers/: index.ts
src/compiler/src/helpers/: index.ts  types.ts
src/compiler/src/loggers/: error.ts  index.ts
src/compiler/src/nodes/: index.ts
src/compiler/src/schemas/: index.ts
src/compiler/src/semantic/: arrays.ts  base.ts  constants.ts  declarations.ts  expressions.ts  externs.ts  functions.ts  if.ts  index.ts  loggers.ts  modules.ts  scope.ts  struct.ts  types.ts  variables.ts
src/compiler/src/ts/: index.ts
src/compiler/src/types/: compiler.ts  index.ts  kinds.ts  sir.ts
src/compiler/src/visitor/: arrays.ts  base.ts  (+13 more)
src/compiler/tests/: frontend.test.cjs  main.io
src/core/: compilerDriver.h  core.h  yogi.cpp
src/core/includes/: core.h
src/core/llvm/: declaration_lowerer.cpp  declaration_lowerer.h  linker.cpp  linker.h  lowerer.cpp  lowerer.h  lowering_context.cpp  lowering_context.h  module_lowerer.cpp  module_lowerer.h  object_writer.cpp  object_writer.h  statement_lowerer.cpp  statement_lowerer.h  type_lowerer.cpp  type_lowerer.h  value_lowerer.cpp  value_lowerer.h
src/core/src/: core.cpp
src/dfs/: index.ts
src/fbs/: main_generated.h  meta_generated.h
src/fbs/schemas/: constants.fbs  declarations.fbs  main.fbs  meta.fbs  module.fbs
src/helpers/: index.ts  types.ts
src/loggers/: error.ts  index.ts
src/pack/: .gitignore  CMakeLists.txt  makefile
src/pack/include/: githubConfig.hpp
src/pack/src/auth/: authConfig.cpp  authConfig.hpp  githubAuth.cpp  tokenStore.hpp  types.hpp
src/pack/src/cache/: cacheKeys.cpp  validateCache.cpp  validateCache.hpp
src/pack/src/cli/: main.cpp
src/pack/src/cli/commands/: build.cpp  build.hpp  clean.cpp  init.cpp  init.hpp  install.cpp  login.hpp  logout.cpp  logout.hpp  publish.cpp  run.cpp  whoami.cpp
src/pack/src/compiler/: buildPlan.cpp  invokeYogic.cpp
src/pack/src/diagnostics/: errors.cpp  errors.hpp  logger.hpp
src/pack/src/fs/: archive.cpp  archive.hpp  fileSystem.hpp  layout.cpp  paths.cpp
src/pack/src/github/: githubClient.cpp  githubClient.hpp  githubTypes.hpp
src/pack/src/lockfile/: readYogiLog.cpp  writeYogiLog.cpp  writeYogiLog.hpp
src/pack/src/manifest/: readManifest.cpp  types.hpp  validateManifest.cpp  validateManifest.hpp
src/pack/src/publish/: createTarball.cpp  packageMetadata.hpp  publishPackage.cpp  publishPackage.hpp  pushRepository.cpp  pushRepository.hpp
src/pack/src/registry/: fetchPackage.cpp  registryClient.cpp  unpackPackage.cpp
src/pack/src/semver/: range.cpp  resolver.hpp  version.hpp
src/runtime/: CMakeLists.txt
src/runtime/includes/yogi/: runtime.h
src/runtime/includes/yogi/runtime/: aggregate.h  any.h  errors.h  memory.h
src/runtime/includes/yogi/runtime/debug/: ownership.h
src/runtime/includes/yogi/runtime/memory/: telemetry.h
src/runtime/src/: any.cpp  errors.cpp  memory.cpp  runtime.cpp
src/runtime/src/abi/: runtime.cpp
src/runtime/src/aggregates/: aggregate.cpp
src/runtime/src/debug/: ownership.cpp
src/runtime/src/diagnostics/: errors.cpp
src/runtime/src/io/: print.cpp
src/runtime/src/memory/: memory.cpp  telemetry.cpp
src/runtime/src/values/: any.cpp
src/ts/: .gitignore  .gitmodules  makefile
src/ts/src/: index.ts
src/ts/tests/: index.io  main.io
src/visitor/: base.ts  exports.ts  expressions.ts  imports.ts  index.ts  literals.ts  object.ts  scanner.ts  variables.ts
src/website/: makefile  package-lock.json  package.json
src/website/client/: README.md  app.js  docs.html  index.html  next.config.js  package-lock.json  package.html  package.json  styles.css
src/website/server/: .env  app.ts  package-lock.json  package.json  tsconfig.json
src/ypm/: .gitignore  package.json
tests/: dev.ts  index.io  index.ts  main.io  utils.io  utils.ts
tests/package-manager/: init_build_run.cmake
tests/runtime/: pipeline_function_ownership.cmake  pipeline_loops_and_methods.cmake  pipeline_switch.cmake  pipeline_switch_ownership.cmake  runtime_cast_test.cpp  runtime_ownership_negative_test.cpp
tests/runtime/unit/: runtime_cast_test.cpp  runtime_range_negative_test.cpp  runtime_string_test.cpp
(+222 files in other folders)
